--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <!-- Estilos propios -->
   <link href="assets/css/styles.css" rel="stylesheet">
 
+  <!-- Flatpickr (calendario para histórico) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+
   <!-- Librerías externas -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -154,6 +157,17 @@
                 <ul id="suggestions" class="list-group search-suggestions"></ul>
                 <div class="form-text small text-muted mt-1">
                   Si no se encuentra en el catálogo, puedes agregarlo manualmente con el botón <strong>+</strong>.
+                </div>
+              </div>
+            </div>
+
+            <!-- Histórico diario -->
+            <div class="row mt-2">
+              <div class="col-12 col-md-6">
+                <label class="form-label fw-semibold mb-1">Consultar histórico por día</label>
+                <input id="histDateInput" type="text" class="form-control form-control-sm" placeholder="Seleccione una fecha con registros">
+                <div class="form-text small text-muted">
+                  Solo se mostrarán días que tengan inventario guardado.
                 </div>
               </div>
             </div>
@@ -321,6 +335,9 @@
       firebase.initializeApp(firebaseConfig);
     }
   </script>
+
+  <!-- Flatpickr -->
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
   <script src="assets/js/app.js"></script>
   <script src="assets/js/inventario.js"></script>
